# depth_fusion

./: .editorconfig  .gitmodules  CMakeLists.txt  CONTRIBUTING  README.md  Rebracer.xml
arsimple/: CMakeLists.txt  fshader.glsl  fsprojection.glsl  lum_constants.h  lum_gl.cpp  lum_gl.h  lum_glprogram2.cpp  lum_glprogram2.h  lum_glwindow.cpp  lum_glwindow.h  lum_linalg.h  lum_mediasource.cpp  lum_mediasource.h  lum_quadrenderer.cpp  lum_quadrenderer.h  lum_transform.cpp  lum_transform.h  lum_unitquad.cpp  lum_unitquad.h  lum_util_gl.cpp  lum_util_gl.h  lum_vertexrecorder.cpp  lum_vertexrecorder.h  lum_win32tools.cpp  lum_win32tools.h  main.cpp  main_arprojection.cpp  simpleTest.cpp  vshader.glsl  vsprojection.glsl
arsimple/Data/: lumwebcam.calib
arsimple/Data/multi/: luma.patt  lumb.patt  lumc.patt  lumd.patt  lumf.patt  lumg.patt  lumj.patt  lumk.patt  luml.patt
res/: detector_params.yaml
src/: artoolkit_pose_estimator.cpp  artoolkit_pose_estimator.h  aruco_detector.h  aruco_pose_estimator.cpp  aruco_pose_estimator.h  calibrated_posed_depth_camera.h  camera_math.cuh  control_widget.cpp  control_widget.h  depth_fusion.cpp  depth_processor.cu  depth_processor.h  fuse.cu  fuse.h  gl_state.cpp  gl_state.h  icp_least_squares_data.cpp  icp_least_squares_data.h  input_buffer.cpp  input_buffer.h  main.cpp  main_controller.cpp  main_controller.h  main_widget.cpp  main_widget.h  marching_cubes.cpp  marching_cubes.h  multi_static_camera_gl_state.cpp  multi_static_camera_gl_state.h  multi_static_camera_pipeline.cpp  multi_static_camera_pipeline.h  pipeline_data_type.h  pose_estimation_method.h  pose_frame.h  pose_utils.cpp  pose_utils.h  projective_point_plane_icp.cu  projective_point_plane_icp.h  raycast.cu  raycast.h  (+16 more)
src/align_nvm_pose/: align_nvm_pose.cpp  align_nvm_pose_cli.cpp
src/aruco/: aruco_estimate_pose_cli.cpp  aruco_pose_estimator.cpp  aruco_pose_estimator.h  cube_fiducial.cpp  cube_fiducial.h  single_marker_fiducial.cpp  single_marker_fiducial.h
src/deprecated/: aruco_detector.cpp
src/fuse_depth/: fuse_depth_cli.cpp
src/interpolate_depth_pose/: interpolate_depth_pose.cpp  interpolate_depth_pose_cli.cpp
src/raycast_volume/: raycast_volume_cli.cpp
src/shaders/: draw_color.fs.glsl  draw_color_discard_transparent.fs.glsl  draw_luma_texture.fs.glsl  draw_normals_texture.fs.glsl  draw_single_color.fs.glsl  draw_texture.fs.glsl  draw_texture.vs.glsl  draw_world_normal.fs.glsl  position_color.vs.glsl  position_normal.vs.glsl  position_only.vs.glsl  position_texcoord.vs.glsl  unproject_point_cloud.vs.glsl  unproject_point_cloud_textured.vs.glsl  visualize_texcoords.fs.glsl
src/visualize_camera_path/: main_widget.cpp  main_widget.h  visualize_camera_path.cpp  visualize_camera_path_cli.cpp
src_deprecated/: artoolkit_pose_estimator.cpp  artoolkitplus_pose_estimator.cpp  artoolkitplus_pose_estimator.h
